// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaFakerPlugin should properly generate a fake doc 1`] = `
Array [
  "firstName",
  "lastName",
  "dateValue",
  "zipCode",
  "city",
]
`;

exports[`schemaFakerPlugin should properly insert a fake doc\` 1`] = `
Array [
  "firstName",
  "lastName",
  "dateValue",
  "zipCode",
  "city",
  "_id",
]
`;

exports[`schemaFakerPlugin should properly insert a fake doc\` 2`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "dateValue",
  "zipCode",
  "city",
]
`;
